recursion.cons.lessons.recursion.cons.Length.scala.error
length:3: error: ';' expected but '=' found.
    return=0
          ^length:6: error: ';' expected but '=' found.
    return=1+length(l.tail)
          ^